Creation of all files for differents part. Wrtting of a part of the 2nd part.

--- a/latex/master.tex
+++ b/latex/master.tex
@@ -48,9 +48,15 @@
 \end{minipage}\\[1cm]
 \end{titlepage}
 \section*{Introduction}
-%\input{introduction}
+\input{introduction}
+\section{Izpack}
+\input{partie1}
+\section{Methodes de travail}
+\input{partie2}
+\section{Travail realise}
+\input{partie3}
 \section*{Conclusion}
-%\input{conclusion}
+\input{conclusion}
 
 \section*{Annexes}
 \input{annexes}
