Ecriture idees pour le rapport en vrac

--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -1,3 +1,11 @@
 \subsection{Decription}
+\subsubsection{Generateur d'installeur}
+\subsubsection{Open-source}
+\subsubsection{Fonctionnalites}
+\subsubsection{Popularitee}
+\subsection{Exemples d'installation}
+\subsubsection{Description du xml}
+\subsubsection{Generation du jar}
+\subsubsection{Installation}
 \subsection{Problemes actuels}
-\subsection{But du projet}
+\subsubsection{Nanoxml}
