--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -1,9 +1,23 @@
-\subsection{Etude de l'utilisation actuelle du xml}
+\subsection{Etat au commencement du projet}
+-> Utilisation intensive de XML
+-> Philosophier de nanoXXml et de DOM differente
+-> -> DOM : Tout est noeud
+-> -> NanoXml : Base sur les tags (elements)
+
+<!--comment>commentaire<comment-->
+<root>
+	<noeud1>text</noeud1>
+</root>
+
+Nano -> root possede 1 enfant
+DOM -> root possede 3 enfants (\n; <noeud1>; \n)
 \subsubsection{Presence de nanoxml}
 \subsubsection{Utilisation de nanoxml}
+
+
 \subsection{Elaboration de la solution}
 \subsubsection{Remplacer les appels}
-\subsubsection{Utilisation d'un design patern}
+\subsubsection{Utilisation d'un design pattern}
 Extraction d'interface du xmlElement.
 
 \subsection{Application et tests}
