Structure du rapport (recopie du rapport de stage...)

--- a/latex/annexes.tex
+++ b/latex/annexes.tex
@@ -1,4 +1,4 @@
-\section{Utilisation des éléments nanoXml}
+\chapter{Utilisation des éléments nanoXml}
 
 \subsection{Parse par nanoXML}
 \begin{verbatim}
