--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -1,11 +1,11 @@
-\subsection{Decription}
-\subsubsection{Generateur d'installeur}
-\subsubsection{Open-source}
-\subsubsection{Fonctionnalites}
-\subsubsection{Popularitee}
-\subsection{Exemples d'installation}
-\subsubsection{Description du xml}
-\subsubsection{Generation du jar}
-\subsubsection{Installation}
-\subsection{Problemes actuels}
-\subsubsection{Nanoxml}
+\section{Decription}
+\subsection{Generateur d'installeur}
+\subsection{Open-source}
+\subsection{Fonctionnalites}
+\subsection{Popularitee}
+\section{Exemples d'installation}
+\subsection{Description du xml}
+\subsection{Generation du jar}
+\subsection{Installation}
+\section{Problemes actuels}
+\subsection{Nanoxml}
