--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -1,9 +1,9 @@
-\subsection{Etat au commencement du projet}
+\section{Etat au commencement du projet}
 -> Utilisation intensive de XML
 -> Philosophier de nanoXXml et de DOM differente
 -> -> DOM : Tout est noeud
 -> -> NanoXml : Base sur les tags (elements)
-
+\begin{verbatim}
 <!--comment>commentaire<comment-->
 <root>
 	<noeud1>text</noeud1>
@@ -11,13 +11,14 @@
 
 Nano -> root possede 1 enfant
 DOM -> root possede 3 enfants (\n; <noeud1>; \n)
-\subsubsection{Presence de nanoxml}
-\subsubsection{Utilisation de nanoxml}
+\end{verbatim}
+\subsection{Presence de nanoxml}
+\subsection{Utilisation de nanoxml}
 
 
-\subsection{Elaboration de la solution}
-\subsubsection{Remplacer les appels}
-\subsubsection{Utilisation d'un design pattern}
+\section{Elaboration de la solution}
+\subsection{Remplacer les appels}
+\subsection{Utilisation d'un design pattern}
 Extraction d'interface du xmlElement.
 -> IXmlElements
 -> IXmlParser
@@ -32,9 +33,9 @@ XfragmentL Non present dans la specifiaction W3C:
 -> Permet include de noeuds sans racines
 Passage par une feuille XSL
 -> include puis suppression des Xfragment
-\subsection{Application et tests}
-\subsubsection{Test unitaires de comparaison}
+\section{Application et tests}
+\subsection{Test unitaires de comparaison}
 Comparaison entre le comportement de nanoXml et de l'adaptateur
-\subsubsection{Integration a IzPack}
-\subsubsection{Test Globale et Profiling}
+\subsection{Integration a IzPack}
+\subsection{Test Globale et Profiling}
 
