--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -14,8 +14,6 @@ DOM -> root possede 3 enfants (\n; <noeud1>; \n)
 \end{verbatim}
 \subsection{Presence de nanoxml}
 \subsection{Utilisation de nanoxml}
-
-
 \section{Elaboration de la solution}
 \subsection{Remplacer les appels}
 \subsection{Utilisation d'un design pattern}
@@ -39,3 +37,9 @@ Comparaison entre le comportement de nanoXml et de l'adaptateur
 \subsection{Integration a IzPack}
 \subsection{Test Globale et Profiling}
 
+\section{Resultats}
+\subsection{Diminution de la taille des installeurs}
+NanoXml : 116Ko
+Adaptateur : 44Ko
+\subsection{Support de fonctionnalitees XML}
+DTD, xinclude
